# playlist-manager

./: .env  .gitignore  LICENSE  README.md  app.py  config.py  example.env  main.py  pyproject.toml  requirements.txt
.github/workflows/: static.yml
api/: main.py  requirements.txt
app/api/: Dockerfile  dependencies.py  main.py
app/api/routes/: artist.py  auth.py  song.py  user.py
app/crud/: artist.py  song.py  spotify.py
app/database/: check_db.ipynb  db.py
app/frontend/: index.html  package-lock.json  package.json
app/models/: __init__.py  _song.py  artist.py  artistsong.py  song.py  spotify.py
data/ct_agenda/html/: 20240616_songlist_de.html  20240616_songlist_en.html  20240623_songlist_de.html  20240623_songlist_en.html
db/: __init__.py  check_db.ipynb  db.py  requirements.txt
db/sql/: create_songs_table.sql  create_spotify_table.sql  insert_song.sql  insert_spotify.sql
docs/: entity_relations.md  index.html
frontend/: index.html
playlist/: check_search_results.ipynb  config.py  server.py  test.py
playlist/data/: search_result.json  search_result2.json
playlist/scripts/: get_spotify_ids.py
scrapper/: browser.py  config.py  get_chrome_driver.py
scrapper/churchtools/: __init__.py  auth.py  navigate.py  parse_agenda_html.py  parse_songlist_html.py  songlist.py
scrapper/tasks/: scrape_playlists.py  scrape_songs.py
songlist-scrapper/: churchtools.py  config.py  example.env  main.py  requirements-dev.txt  requirements.txt
